Initial doc commit

--- a/src/themes/dark.styl
+++ b/src/themes/dark.styl
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro:300,400,600')
 
-$color-primary = #ea6f5a
+$color-primary = #ff0000
 $color-bg = #3f3f3f
 $color-text = #c8c8c8
 $sidebar-width = 300px
