--- a/src/themes/basic/_coverpage.styl
+++ b/src/themes/basic/_coverpage.styl
@@ -23,6 +23,12 @@ section.cover
     text-align center
     z-index 1
 
+    .anchor span
+      color white
+
+    img
+      height 120px
+
   a
     color inherit
     text-decoration none
@@ -35,7 +41,7 @@ section.cover
     margin 1em 0
 
   h1
-    color inherit
+    color white
     font-size 2.5rem
     font-weight 300
     margin 0.625rem 0 2.5rem
