--- a/src/themes/basic/_layout.styl
+++ b/src/themes/basic/_layout.styl
@@ -6,6 +6,11 @@
   -webkit-touch-callout none
   box-sizing border-box
 
+@font-face
+   font-family CircularStd
+   font-style normal
+   src url(../lib/CircularStd-Medium.woff)
+
 body:not(.ready)
   overflow hidden
 
@@ -51,7 +56,7 @@ body
   -moz-osx-font-smoothing grayscale
   -webkit-font-smoothing antialiased
   color $color-text
-  font-family 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif
+  font-family CircularStd, sans-serif
   font-size 15px
   letter-spacing 0
   margin 0
