--- a/src/themes/buble.styl
+++ b/src/themes/buble.styl
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Inconsolata|Inconsolata-Bold')
 
-$color-primary = #0074d9
+$color-primary = #ff0000
 $color-bg = #fff
 $color-text = #34495e
 $sidebar-width = 16rem
