--- a/src/themes/vue.styl
+++ b/src/themes/vue.styl
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono|Source+Sans+Pro:300,400,600')
 
-$color-primary = #42b983
-$color-bg = #fff
-$color-text = #34495e
+$color-primary = #c0c2c9
+$color-bg = #010c2c
+$color-text = #ffffff
 $sidebar-width = 300px
 
 @import 'basic/_layout'
@@ -14,13 +14,33 @@ body
 /* sidebar */
 .sidebar
   background-color $color-bg
-  color #364149
+  color #ffffff
+
+  .search
+    display none
+
+  .search input
+    background-color #7549df
+    color #b59eeb
+    border-radius 15px
+    border none
+    box-shadow none
+    height 40px
+
+    &:focus {
+      border none
+      box-shadow none
+    }
+
+    &::-webkit-input-placeholder, &::-moz-placeholder {
+      color #b59eeb
+    }
 
   li
     margin 6px 0 6px 0
 
   ul li a
-    color #505d6b
+    color #ffffff
     font-size 14px
     font-weight normal
     overflow hidden
@@ -36,7 +56,7 @@ body
 
   ul li.active > a
     border-right 2px solid
-    color var(--theme-color, $color-primary)
+    color #582acb
     font-weight 600
 
 .app-sub-sidebar
@@ -48,7 +68,7 @@ body
 
 /* markdown content found on pages */
 .markdown-section h1, .markdown-section h2, .markdown-section h3, .markdown-section h4, .markdown-section strong
-  color #2c3e50
+  color #582acb
   font-weight 600
 
 .markdown-section a
@@ -104,7 +124,7 @@ body
   color #7f8c8d
 
 .markdown-section code
-  background-color #f8f8f8
+  background-color #282828
   border-radius 2px
   color #e96900
   font-family 'Roboto Mono', Monaco, courier, monospace
@@ -116,7 +136,7 @@ body
 .markdown-section pre
   -moz-osx-font-smoothing initial
   -webkit-font-smoothing initial
-  background-color #f8f8f8
+  background-color #282828
   font-family 'Roboto Mono', Monaco, courier, monospace
   line-height 1.5rem
   margin 1.2em 0
@@ -159,7 +179,7 @@ body
 .token.attr-value, .token.control, .token.directive, .token.unit
   color var(--theme-color, $color-primary)
 
-.token.keyword, .token.function
+.token.keyword
   color #e96900
 
 .token.statement, .token.regex, .token.atrule
@@ -190,9 +210,9 @@ body
 .markdown-section pre > code
   -moz-osx-font-smoothing initial
   -webkit-font-smoothing initial
-  background-color #f8f8f8
+  background-color #282828
   border-radius 2px
-  color #525252
+  color #ffffff
   display block
   font-family 'Roboto Mono', Monaco, courier, monospace
   font-size 0.8rem
