--- a/src/themes/vue.styl
+++ b/src/themes/vue.styl
@@ -16,6 +16,9 @@ body
   background-color $color-bg
   color #ffffff
 
+  .cf-text, .cf-powered-by
+    color white !important
+
   .search
     display none
 
