--- a/src/themes/vue.styl
+++ b/src/themes/vue.styl
@@ -16,6 +16,9 @@ body
   background-color $color-bg
   color #ffffff
 
+  .app-name
+    margin-top 10px
+
   .cf-text, .cf-powered-by
     color white !important
 
